rid of gitignore txt and finish the Auth api sucessfully run with postman

--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AuthServiceDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-SIDOS7HU\\SQL2024;Database=AuthServiceDb;Integrated Security=true; Encrypt = false"
   },
   "Jwt": {
     "Key": "Your_Secret_Key",
