--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-SIDOS7HU\\SQL2024;Database=AuthServiceDb;Integrated Security=true; Encrypt = false"
+    "DefaultConnection": "Server=tcp:eshop-will.database.windows.net,1433;Initial Catalog=Authentication;Persist Security Info=False;User ID=will;Password=wersdftT069!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
     "Key": "Your_Secret_Key",
